--- a/online-shop/online-shop-backend/pom.xml
+++ b/online-shop/online-shop-backend/pom.xml
@@ -124,6 +124,17 @@
 			<artifactId>spring-context-support</artifactId>
 
 		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 	</dependencies>
 	<build>
