--- a/online-shop/online-shop-backend/src/main/resources/application.properties
+++ b/online-shop/online-shop-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/managementtest1?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/managementtest1?createDatabaseIfNotExist=true&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.generate-ddl=true
