--- a/online-shop/online-shop-backend/src/main/resources/application.properties
+++ b/online-shop/online-shop-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/managementtest1?createDatabaseIfNotExist=true
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.username=root
+spring.datasource.password=Licenta123!
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
