--- a/online-shop/online-shop-frontend/package.json
+++ b/online-shop/online-shop-frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~13.3.0",
     "@angular/localize": "~13.3.0",
     "@angular/material": "^13.3.9",
@@ -26,6 +27,7 @@
     "@popperjs/core": "^2.10.2",
     "angular-bootstrap-md": "^14.0.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^8.8.8",
     "ng-search-pipe": "^1.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
